# circom-2-arithc-ts

./: .npmignore  README.md  manualTest.ts  package-lock.json  package.json
src/: Circuit.ts  index.ts  initWasmLib.ts  wasmLib.ts
tests/: Circuit.test.ts
wasm/: Cargo.toml  build.ts
wasm/src/: lib.rs
