[package]
name = "circom_2_arithc_ts_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
circom-2-arithc = { git = "https://github.com/namnc/circom-2-arithc", branch = "wasm-support" }
getrandom = { version = "0.2", features = ["js"] }
lalrpop-util = { version = "0.19.12", features = ["lexer"] }

[dependencies.web-sys]
version = "0.3.4"
features = []
